--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-validation": "^1.0.2",
     "http-status": "^1.2.0",
     "morgan": "^1.8.0",
+    "react-scripts": "^5.0.1",
     "resource-router-middleware": "^0.6.0"
   },
   "devDependencies": {
